Plugin Name: Custom Sidebars Pro
Author: Javier Marquez (Incsub), Philipp Stracker (Incsub), Marcin Pietrzak (Incsub)
Buildtime: BUILDTIME

Change Log:
----------------------------------------------------------------------

3.1.7 ( 2018-xx-xx )
----------------------------------------------------------------------
- Added ability show/hide widgets depend on screen size, using css media query.
- Allow to use categories and tags for pages.
- Improved plugin initialization now, plugin classes are loaden only on nessary admin pages.
- Improved UX for Custom Sidebars metabox on special pages: "Front Page", "Blog Page" and "WooCommerce Shop Page".
- Updated "WPMU Dev code library" to version 3.0.9.

3.1.6 ( 2018-05-28 )
----------------------------------------------------------------------
- Fixed an export problem on PHP 5.2, json_encode() have only one parameter.

3.1.5 ( 2018-05-14 )
----------------------------------------------------------------------
- Fixed a problem with saving an entry sidebars replacement.
- Added ability to allow change sidebars by an entry author.

3.1.4 ( 2018-05-02 )
----------------------------------------------------------------------
- Fixed a problem with widgets display on IE11.
- Handle custom taxonomies.
- Updated "WPMU Dev code library" to version 3.0.6.

3.1.3 ( 2018-03-21 )
- Added version to scripts, to avoid browser cache problem.
- Fixed problems with widgets alignment on mobiles.
- Improved custom sidebar edit modal, now it remembers "Advanced Edit" status.
- Load JavaScript templates only on the widgets page.

3.1.2 ( 2018-02-09 )
----------------------------------------------------------------------
- Added integration with Polylang - now you can choose sidebar to depend on Polylang language.
- Added integration with WPML - now you can choose sidebar to depend on WPML language.
- Added check to avoid warning when a user deletes term which is assigned to "Sidebar Location".
- Updated "WPMU Dev code library" to version 3.0.5.
